force-app/main/default/objects/Storefront_Item_Step__c/Storefront_Item_Step__c.object-meta.xml
<CustomObject>
    <label>Storefront Item Step</label>
    <nameField>
        <displayFormat>SIS - {0000}</displayFormat>
        <label>Storefront Item Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storefront Item Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>