force-app/main/default/objects/Storefront_Item_Step__c/fields/Button_Icon__c.field-meta.xml
<CustomField>
    <fullName>Button_Icon__c</fullName>
    <label>Button Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>