force-app/main/default/objects/Storefront_Item_Step__c/fields/Button_Type__c.field-meta.xml
<CustomField>
    <fullName>Button_Type__c</fullName>
    <label>Button Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>standard</fullName>
            </value>
            <value>
                <fullName>icon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>