force-app/main/default/objects/Storefront_Item_Step__c/fields/Button_Variant__c.field-meta.xml
<CustomField>
    <fullName>Button_Variant__c</fullName>
    <label>Button Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>base</fullName>
            </value>
            <value>
                <fullName>neutral</fullName>
            </value>
            <value>
                <fullName>brand</fullName>
            </value>
            <value>
                <fullName>brand-outline</fullName>
            </value>
            <value>
                <fullName>destructive</fullName>
            </value>
            <value>
                <fullName>destructive-text</fullName>
            </value>
            <value>
                <fullName>inverse</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>