force-app/main/default/objects/Storefront_Item_Step__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>ISPICKVAL(Status__c, &quot;active&quot;)</formula>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>