force-app/main/default/objects/Storefront_Item_Step__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <formula>ISPICKVAL(Status__c, &quot;completed&quot;)</formula>
    <label>IsCompleted</label>
    <type>Checkbox</type>
</CustomField>