force-app/main/default/objects/Storefront_Item_Step__c/fields/IsMarker__c.field-meta.xml
<CustomField>
    <fullName>IsMarker__c</fullName>
    <formula>ISPICKVAL(Status__c, &quot;marker&quot;)</formula>
    <label>IsMarker</label>
    <type>Checkbox</type>
</CustomField>