force-app/main/default/objects/Storefront_Item_Step__c/fields/Storefront_Item_Setup__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Item_Setup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Storefront Item Setup</label>
    <referenceTo>Storefront_Item_Setup__c</referenceTo>
    <relationshipLabel>Storefront Item Steps</relationshipLabel>
    <relationshipName>Storefront_Item_Steps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>