force-app/main/default/objects/Storefront_Item_Step__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Storefront_Item_Setup__c</columns>
    <columns>Status__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>